<resources>
    <string name="app_name">Stomanage</string>
    <string name="Email">אימייל</string>
    <string name="Password">סיסמא</string>
    <string name="login">התחבר</string>
    <string name="registrar">הירשם</string>
    <string name="register">רשום משתמש חדש</string>
    <string name="fname">שפ פרטי</string>
    <string name="lname">שם משפחה</string>
    <string name="phone">מספר פלאפון</string>
    <string name="id">תעודת זהות</string>
    <string name="TroopName">שם השבט</string>
    <string name="troop">ניהול שבטים</string>
    <string name="user">רישום משתמש חדש</string>
    <string name="factory">ניהול מפעלים</string>
    <string name="warehouse">ניהול מחסן</string>
    <string name="add">הוסף</string>
    <string name="factoryName">שם המפעל</string>
    itemName
    <string name="itemName">השם המוצר</string>

    <string name="temp">temp</string>
</resources>